--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main id="container">
       <div class="card" id="cardPurple">
         <div class="flexContainer1">
-          <img class="profilePic" src="images/image-daniel.jpg" />
+          <img class="profilePic" src="images/image-daniel.jpg" alt="profile picture of student Daniel" />
           <h1 class="profileName">
             Daniel Clifford <br />
             <em class="verifiedGrad">Verified Graduate</em>
@@ -52,7 +52,7 @@
 
       <div class="card" id="cardDarkGray">
         <div class="flexContainer1">
-          <img class="profilePic" src="images/image-jonathan.jpg" />
+          <img class="profilePic" src="images/image-jonathan.jpg" alt="profile picture of student Jonathan"/>
           <h1 class="profileName">
             Jonathan Walters <br />
             <em class="verifiedGrad">Verified Graduate</em>
@@ -71,7 +71,7 @@
       </div>
       <div class="card cardWhite" id="cardWhiteShort">
         <div class="flexContainer1">
-          <img class="profilePic" src="images/image-jeanette.jpg" />
+          <img class="profilePic" src="images/image-jeanette.jpg" alt="profile picture of student Jeanette"/>
           <h1 class="profileName">
             Jeanette Harmon <br />
             <em class="verifiedGrad">Verified Graduate</em>
@@ -90,7 +90,7 @@
 
       <div class="card" id="cardDarkBlackBlue">
         <div class="flexContainer1">
-          <img class="profilePic" src="images/image-patrick.jpg" />
+          <img class="profilePic" src="images/image-patrick.jpg" alt="profile picture of student Patrick" />
           <h1 class="profileName">
             Patrick Abrams <br />
             <em class="verifiedGrad">Verified Graduate</em>
@@ -115,7 +115,7 @@
 
       <div class="card" id="cardWhiteLong">
         <div class="flexContainer1">
-          <img class="profilePic" src="images/image-kira.jpg" />
+          <img class="profilePic" src="images/image-kira.jpg" alt="profile picture of student Kira" />
           <h1 class="profileName">
             Kira Whittle <br />
             <em class="verifiedGrad">Verified Graduate</em>
